specs/blueprints/errors/parsing/section_without_key.eno
# A section without a key

-- input
#
-- input

## ParseError

-- text
The section in line 1 has no key.
-- text

-- snippet
   Line | Content
 >    1 | #
-- snippet

selection: [0,1] => [0,1]
